# distributed-locks

./: .gitignore  Cargo.toml  README.md
lock-cli/: Cargo.toml
lock-cli/src/: main.rs
lock-core/: Cargo.toml
lock-core/src/: lib.rs
lock-server/: Cargo.toml  build.rs
lock-server/src/: api.rs  main.rs
proto/: lock.proto
